# pc_diagnostic

./: .gitignore  ARCHITECTURE.md  README.md  build_binaries.py  exercises_sandbox.py  package_mac.py  pc_diagnostic.spec  pyproject.toml
doc/: alerting.md  architecture.md  build_and_packaging.md  collector_and_cache.md  dashboard.md  data_model.md  diagnostics.md  project_plan.md  providers.md
src/pc_diagnostic/: __init__.py  cache.py  collector.py  dashboard.py  main.py  models.py  normalizer.py
src/pc_diagnostic/alerts/: dispatcher.py  evaluator.py  models.py
src/pc_diagnostic/diagnostics/: crew.py
src/pc_diagnostic/providers/: __init__.py  base.py  lhm_provider.py  psutil_provider.py  registry.py  smc_helper.c  smc_provider.py  stub.py
tests/: __init__.py  test_alerts.py  test_cache.py  test_collector.py  test_dashboard.py  test_diagnostics.py  test_lhm_provider.py  test_models.py  test_normalizer.py  test_psutil_provider.py  test_smc_provider.py  test_stub_provider.py
