[project]
name = "pc-diagnostic"
version = "0.1.0"
description = "A cross-platform PC monitoring and AI-diagnostic tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pc_diagnostic"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
